--- a/src/components/Visualization.css
+++ b/src/components/Visualization.css
@@ -2,6 +2,7 @@
     height: 100%;
     width: 100%;
     padding: 2rem;
+    padding-left: 1rem;
     padding-right: 0.5rem;
 }
 
